# Fujitsu-RAG-Hard-Benchmark

./: README.ja.md  README.md  TERMS_OF_USE.md  pyproject.toml
dataset/: DL_URL.csv  FJ_KGQA_Hard.yaml
evaluate/: evaluate_qa.py  sample.json
